--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Codigo JSX -->
     <script type="text/babel">
         function CommentForm({ onAddComment }) {
-            const [text, setText] = React.useState([]);
+            const [text, setText] = React.useState("");
 
             const handleChange = (event) => {
                 setText(event.target.value);
